# portugal-running-calendar

./: .envrc  .gitignore  .gitmodules  CLAUDE.md  Containerfile  IMPLEMENTATION_PLAN.md  Justfile  Makefile  README.md  REFACTOR_PLAN.md  clean-events.py  deploy.sh  extract-all-events.py  extract-events.py  extract-features-from-description.sh  extract-features.py  extract-portugal-running-events.py  extract-sample-events.py  fetch-event-data.py  fetch-event-data.sh  fetch-event-ics.sh  fetch-event-page.sh  fetch-ics.py  fetch-wp-taxonomies.sh  fetch-wp-types.sh  fetch_icals.py  generate-descriptions.py  generate-one-line-description.sh  geocode-location.py  geocode-location.sh  geocode_location.sh  google-geocoding-integration.md  main.py  next.config.ts  package-lock.json  package.json  parse_events.py  portugal-running-cli.py  profile-extraction.py  pushover-notify.sh  (+6 more)
app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
cloudflare/: package-lock.json  package.json  wrangler.jsonc
components/: CalendarMonth.tsx  CalendarStats.tsx  CalendarView.tsx  DistrictMap.tsx  DistrictMapInner.tsx  EventCard.tsx  EventDetailClient.tsx  EventDetailPage.tsx  EventFilters.tsx  EventList.tsx  EventLocationMap.tsx  Footer.tsx  Header.tsx  HomepageClient.tsx  MapFilters.tsx  MapPageClient.tsx  PageLayout.tsx  Pagination.tsx  SavedEventsPage.tsx
frontend-v2/: Justfile  package-lock.json  (+1 more)
scraper/: .gitignore  Justfile  Makefile  download-image.sh  fetch-event-ics.sh  fetch-event-page.sh  fetch-taxonomy-name.sh  fetch-wp-types.sh  portugal-running-cli.py  pyproject.toml  split-events.sh
(+4369 files in other folders)
