[project]
name = "portugal-running"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "flake8>=7.2.0",
    "mypy>=1.16.1",
    "pylint>=3.3.7",
    "ruff>=0.12.0",
    "types-aiofiles>=24.1.0.20250606",
]
